kubernetes/apps/default/eep-test/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eep-test
  labels:
    app.kubernetes.io/name: eep-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: eep-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: eep-test
    spec:
      containers:
        - name: http-debug
          image: ghcr.io/ishioni/http-debug:0.0.3
          ports:
            - name: http
              containerPort: 8080
