kubernetes/apps/default/eep-test/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eep-test
  labels:
    app.kubernetes.io/name: eep-test
spec:
  selector:
    app.kubernetes.io/name: eep-test
  ports:
    - name: http
      port: 80
      targetPort: http
