kubernetes/apps/default/eep-test/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eep-test
  labels:
    app.kubernetes.io/name: eep-test
spec:
  hostnames:
    - eep-test.ishioni.casa
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: eep-test
          port: 80
